💄 add or update the ui and style file

--- a/index.html
+++ b/index.html
@@ -1,23 +1,73 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilo.css">
-    <title>Document</title>
+    <title>Magic</title>
 </head>
+
 <body>
     <header>
-
-    </header>
-    <section class="principal">
-        <img src="./img/banner-principal.jpg" alt="">
-        <div class="conteudoPrincipal">
-            <img src="./img/titulo_banner.png" alt=""></img>
-            <h1 class="textoPrincipal">Lobisomens. Bruxos. Zumbis. Abrace a noite com uma nova coleção assustadora de magic: The Gathering.</h1>
-            <a class="btnPrincipal" href="#">Reserve agora</a>
+        <div class="logo">
+            <img src="./img/magic_logo.png" alt="">
         </div>
-    </section>
+        <nav class="menu">
+            <a href="#">Produtos</a>
+            <a href="#">Assista</a>
+            <a href="#">Jogar</a>
+            <a href="#">Historia</a>
+            <a href="#">Artigos</a>
+        </nav>
+    </header>
+    <main>
+        <section class="principal">
+            <img src="./img/banner-principal.jpg" alt="">
+            <div class="conteudoPrincipal">
+                <img src="./img/titulo_banner.png" alt=""></img>
+                <h1 class="textoPrincipal">Lobisomens. Bruxos. Zumbis. Abrace a noite com uma nova coleção assustadora de
+                    magic: The Gathering.</h1>
+                <a class="btnPrincipal" href="#">Reserve agora</a>
+            </div>
+        </section>
+        <article>
+            <img src="./img/mtg-jogomesa.jpg" alt="">
+
+            <h2>MTG ARENA</h2>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                <br> Sequi impedit ratione maiores dignissimos facilis quasi
+                dolorem beatae.
+            </p>    
+                <a href="#">Encontre um Produto</a>
+        </article>
+
+        <article>
+            <img src="./img/mtg-online.jpg" alt="">
+
+            <h2>MTG ARENA</h2>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                <br> Sequi impedit ratione maiores dignissimos facilis quasi
+                dolorem beatae.
+            </p>    
+                <a href="#">Jogue Agora</a>
+        </article>
+
+        <article>
+            <img src="./img/mtg-competitivo.jpg" alt="">
+
+            <h2>MTG ARENA</h2>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                <br> Sequi impedit ratione maiores dignissimos facilis quasi
+                dolorem beatae.
+            </p>    
+                <a href="#">Saiba Mais</a>
+        </article>
+    </main>
 </body>
+
 </html>
