💄 add or update the ui and style file

--- a/index.html
+++ b/index.html
@@ -27,47 +27,101 @@
             <img src="./img/banner-principal.jpg" alt="">
             <div class="conteudoPrincipal">
                 <img src="./img/titulo_banner.png" alt=""></img>
-                <h1 class="textoPrincipal">Lobisomens. Bruxos. Zumbis. Abrace a noite com uma nova coleção assustadora de
+                <h1 class="textoPrincipal">Lobisomens. Bruxos. Zumbis. Abrace a noite com uma nova coleção assustadora
+                    de
                     magic: The Gathering.</h1>
                 <a class="btnPrincipal" href="#">Reserve agora</a>
             </div>
         </section>
-        <article>
-            <img src="./img/mtg-jogomesa.jpg" alt="">
-
-            <h2>MTG ARENA</h2>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                <br> Sequi impedit ratione maiores dignissimos facilis quasi
-                dolorem beatae.
-            </p>    
-                <a href="#">Encontre um Produto</a>
-        </article>
-
-        <article>
-            <img src="./img/mtg-online.jpg" alt="">
-
-            <h2>MTG ARENA</h2>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                <br> Sequi impedit ratione maiores dignissimos facilis quasi
-                dolorem beatae.
-            </p>    
-                <a href="#">Jogue Agora</a>
-        </article>
-
-        <article>
-            <img src="./img/mtg-competitivo.jpg" alt="">
-
-            <h2>MTG ARENA</h2>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                <br> Sequi impedit ratione maiores dignissimos facilis quasi
-                dolorem beatae.
-            </p>    
-                <a href="#">Saiba Mais</a>
-        </article>
+        <section class="secaoNossosJogos">
+            <h1 class="secaoNossosJogosTitulo">Nossos jogos</h1>
+            <div class="secaoNossosJogosArtigos">
+                <article class="secaoNossosJogosArtigos__Artigo">
+                    <img src="./img/mtg-arena.jpg" alt="">
+                    <h2>MTG arena</h2>
+                    <p>
+                        Traga a estratégia. Traga a ação.
+                        MTG Arena traz o lendário jogo de cards
+                        e a estratégia para PC, Mac, Android e iOS.
+                    </p>
+                    <a href="#">Jogue gratuitamente</a>
+                </article>
+                <article class="secaoNossosJogosArtigos__Artigo">
+                    <img src="./img/mtg-jogomesa.jpg" alt="">
+                    <h2>Jogo de mesa</h2>
+                    <p>
+                        Magic é sobre comunidade, juntar-se com
+                        o seus, seja jogando em casa, com amigos
+                        ou em sua loja local!
+                    </p>
+                    <a href="#">Encontre um produto</a>
+                </article>
+                <article class="secaoNossosJogosArtigos__Artigo">
+                    <img src="./img/mtg-online.jpg" alt="">
+                    <h2>Magic online</h2>
+                    <p>
+                        Espereimente a plataforma original para
+                        fãs de Legado, Moderno e outros formatos
+                        clássicos de Magic. Disponível no computador!
+                    </p>
+                    <a href="#">Jogue agora</a>
+                </article>
+                <article class="secaoNossosJogosArtigos__Artigo">
+                    <img src="./img/mtg-competitivo.jpg" alt="">
+                    <h2>Competitivo</h2>
+                    <p>
+                        Acompanhe a Magic Pro League, participe de
+                        competições de mesa e digitais!
+                    </p>
+                    <a href="#">Saiba Mais</a>
+                </article>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div>
+            <div>Social
+                <a href="">face</a>
+                <a href="">twiter</a>
+                <a href="">mensagem</a>
+                <a href="">youtube</a>
+                <a href="">instagran</a>
+            </div>
+            <div>
+                <ul>Encontre
+                    <li>Artigos</li>
+                    <li>Formatos</li>
+                    <li>Regras</li>
+                    <li>Papéis de Parede</li>
+                    <li>Podcasts</li>
+                </ul>
+                <ul>Empresa
+                    <li>Sobre</li>
+                    <li>Carreiras</li>
+                    <li>Suporte</li>
+                    <li>WPN</li>
+                </ul>
+                <ul>Marcas
+                    <li>Avallon Hill</li>
+                    <li>Dungeons and Dragons</li>
+                    <li>Duel Masters</li>
+                    <li>Magic</li>
+                </ul>
+            </div>
+        </div>
+        <div>
+            <img src="./img/wizards_logo_119x80.png" alt="">
+            <img src="./img/hasbro.png" alt="">
+            <img src="./img/esrb.png" alt="">
+        </div>
+        <div>
+            <a href="">Termos de uso</a>
+            <a href="">Código de conduta</a>
+            <a href="">Politíca de privacidade</a>
+            <a href="">Cookies</a>
+            <a href="">Politíca de conteúdo de fãs</a>
+        </div>
+    </footer>
 </body>
 
 </html>
