💄 add or update the ui and style file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/rodape.css">
     <title>Magic</title>
 </head>
 
@@ -78,14 +79,16 @@
             </div>
         </section>
     </main>
-    <footer>
-        <div>
-            <div>Social
-                <a href="">face</a>
-                <a href="">twiter</a>
-                <a href="">mensagem</a>
-                <a href="">youtube</a>
-                <a href="">instagran</a>
+    <footer class="rodape container">
+        <div class="rodapeConteudo">
+            <div class="rodapeSocial">Social
+                <ul class="rodapeSocial__Contato">
+                    <li><a class="rodape__midia" href="#"><img src="./img/facebook-icon.png" alt=""></a></li>
+                    <li><a class="rodape__midia" href="#"><img src="./img/twitter-icon.png" alt=""></a></li>
+                    <li><a class="rodape__midia" href="#"><img src="./img/twitch-icon.png" alt=""></a></li>
+                    <li><a class="rodape__midia" href="#"><img src="./img/youtube-icon.png" alt=""></a></li>
+                    <li><a class="rodape__midia" href="#"><img src="./img/instagram.png" alt=""></a></li>
+                </ul>
             </div>
             <div>
                 <ul>Encontre
