💄 Add or update the UI and style files.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="css/principal.css">
+    <link rel="stylesheet" href="css/nossosJogos.css">
     <link rel="stylesheet" href="css/rodape.css">
     <title>Magic</title>
 </head>
 
 <body>
-    <header>
+    <header class="cabecalho container">
         <div class="logo">
             <img src="./img/magic_logo.png" alt="">
         </div>
@@ -23,7 +26,7 @@
             <a href="#">Artigos</a>
         </nav>
     </header>
-    <main>
+    <main class="container">
         <section class="principal">
             <img src="./img/banner-principal.jpg" alt="">
             <div class="conteudoPrincipal">
@@ -90,21 +93,21 @@
                     <li><a class="rodape__midia" href="#"><img src="./img/instagram.png" alt=""></a></li>
                 </ul>
             </div>
-            <div>
-                <ul>Encontre
+            <div class="rodape__Assuntos">
+                <ul class="rodape__Assuntos__links">Encontre
                     <li>Artigos</li>
                     <li>Formatos</li>
                     <li>Regras</li>
                     <li>Papéis de Parede</li>
                     <li>Podcasts</li>
                 </ul>
-                <ul>Empresa
+                <ul class="rodape__Assuntos__links">Empresa
                     <li>Sobre</li>
                     <li>Carreiras</li>
                     <li>Suporte</li>
                     <li>WPN</li>
                 </ul>
-                <ul>Marcas
+                <ul class="rodape__Assuntos__links">Marcas
                     <li>Avallon Hill</li>
                     <li>Dungeons and Dragons</li>
                     <li>Duel Masters</li>
@@ -126,5 +129,4 @@
         </div>
     </footer>
 </body>
-
 </html>
