💄 Add or update the UI and style files

--- a/index.html
+++ b/index.html
@@ -115,18 +115,19 @@
                 </ul>
             </div>
         </div>
-        <div>
-            <img src="./img/wizards_logo_119x80.png" alt="">
-            <img src="./img/hasbro.png" alt="">
-            <img src="./img/esrb.png" alt="">
+        <div class="rodape__Img">
+            <img class="rodape__Img__itens" src="./img/wizards_logo_119x80.png" alt="">
+            <img class="rodape__Img__itens" src="./img/hasbro.png" alt="">
+            <img class="rodape__Img__itens" src="./img/esrb.png" alt="">
         </div>
-        <div>
-            <a href="">Termos de uso</a>
-            <a href="">Código de conduta</a>
-            <a href="">Politíca de privacidade</a>
-            <a href="">Cookies</a>
-            <a href="">Politíca de conteúdo de fãs</a>
+        <div class="rodape__PoliticaDoSite">
+            <a class="rodape__PoliticaDoSite__Links" href="#">Termos de uso</a>
+            <a class="rodape__PoliticaDoSite__Links" href="#">Código de conduta</a>
+            <a class="rodape__PoliticaDoSite__Links" href="#">Politíca de privacidade</a>
+            <a class="rodape__PoliticaDoSite__Links" href="#">Cookies</a>
+            <a class="rodape__PoliticaDoSite__Links" href="#">Politíca de conteúdo de fãs</a>
         </div>
+        <p class="copyright">&copy; 1993-2021 wizards of the coast llc, a subsidiary of hasbro, inc. all rights reserved.</p>
     </footer>
 </body>
 </html>
