💄 Add or update the UI and style files

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
     <main class="container">
-        <section class="principal">
+        <section class="container principal">
             <img src="./img/banner-principal.jpg" alt="">
             <div class="conteudoPrincipal">
                 <img src="./img/titulo_banner.png" alt=""></img>
