💄 Add or update the UI and style files

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main class="container">
         <section class="container principal">
             <img src="./img/banner-principal.jpg" alt="">
-            <div class="conteudoPrincipal">
+            <div class=" container conteudoPrincipal">
                 <img src="./img/titulo_banner.png" alt=""></img>
                 <h1 class="textoPrincipal">Lobisomens. Bruxos. Zumbis. Abrace a noite com uma nova coleção assustadora
                     de
@@ -84,35 +84,45 @@
     </main>
     <footer class="rodape container">
         <div class="rodapeConteudo">
-            <div class="rodapeSocial">Social
+            <div class="rodapeSocial">                
+                <h2>Social</h2>
                 <ul class="rodapeSocial__Contato">
                     <li><a class="rodape__midia" href="#"><img src="./img/facebook-icon.png" alt=""></a></li>
                     <li><a class="rodape__midia" href="#"><img src="./img/twitter-icon.png" alt=""></a></li>
                     <li><a class="rodape__midia" href="#"><img src="./img/twitch-icon.png" alt=""></a></li>
                     <li><a class="rodape__midia" href="#"><img src="./img/youtube-icon.png" alt=""></a></li>
-                    <li><a class="rodape__midia" href="#"><img src="./img/instagram.png" alt=""></a></li>
+                    <li><a class="rodape__midia" href="#"><img src="./img/user.png" alt=""></a></li>
                 </ul>
             </div>
             <div class="rodape__Assuntos">
-                <ul class="rodape__Assuntos__links">Encontre
-                    <li>Artigos</li>
-                    <li>Formatos</li>
-                    <li>Regras</li>
-                    <li>Papéis de Parede</li>
-                    <li>Podcasts</li>
-                </ul>
-                <ul class="rodape__Assuntos__links">Empresa
-                    <li>Sobre</li>
-                    <li>Carreiras</li>
-                    <li>Suporte</li>
-                    <li>WPN</li>
-                </ul>
-                <ul class="rodape__Assuntos__links">Marcas
-                    <li>Avallon Hill</li>
-                    <li>Dungeons and Dragons</li>
-                    <li>Duel Masters</li>
-                    <li>Magic</li>
-                </ul>
+                <div>
+                    <h2>Encontre</h2>
+                    <ul class="rodape__Assuntos__links">
+                        <li>Artigos</li>
+                        <li>Formatos</li>
+                        <li>Regras</li>
+                        <li>Papéis de Parede</li>
+                        <li>Podcasts</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Empresa</h2>
+                    <ul class="rodape__Assuntos__links">
+                        <li>Sobre</li>
+                        <li>Carreiras</li>
+                        <li>Suporte</li>
+                        <li>WPN</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Marcas</h2>
+                    <ul class="rodape__Assuntos__links">
+                        <li>Avallon Hill</li>
+                        <li>Dungeons and Dragons</li>
+                        <li>Duel Masters</li>
+                        <li>Magic</li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="rodape__Img">
